# namecheap-email-mcp

./: .gitignore  Procfile  curl.txt  main.py  pyproject.toml
